# Pong

./: .clang-format  .gitattributes  .gitignore  .python-version  CMakeLists.txt  LICENSE  README.md  SolutionController.py  SolutionRenamer.py  SolutionUpgrader.py  conanfile.py
.github/workflows/: install.yml.d
Source/: Engine.cpp
Standalone/: CMakeLists.txt
Standalone/Source/: Main.cpp
Utilities/: AboutThisFolder.md
Utilities/CMakeToolChains/: aarch64-linux-gnu.cmake  x86_64-unknown-linux-gnu.cmake  x86_64-w64-mingw32.cmake
Utilities/ConanProfiles/: aarch64-linux-gnu  x86_64-unknown-linux-gnu  x86_64-w64-mingw32
cmake/: tools.cmake
cmake/Modules/: FindX11.cmake
include/Engine/: Engine.hpp
